# LynxScript-Python

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
lynxscript/: __init__.py  main.py
lynxscript/codegen/: __init__.py  generator.py  json_models.py  structures.py
lynxscript/compiler/: __init__.py  compiler.py  symbol_table.py
lynxscript/lib/: stdlib.lxs
lynxscript/parser/: __init__.py  ast.py  parser.py
tests/: test_compiler.py  test_parser.py
